--- a/style/style.css
+++ b/style/style.css
@@ -39,6 +39,8 @@ main{
 section{
   background-color: white;
   margin-bottom: 10px;
+  border-radius: 5px;
+  padding: 10px;
 }
 
 .group-container{
@@ -47,38 +49,52 @@ section{
 }
 .carta{
   flex-basis: 18%;
-  background-color: grey;
   margin: 1%;
-  /* padding: 5px; */ 
+  border: 2px solid black;
+  cursor: pointer;
+}
+
+.carta.card_user{
+  border: 5px solid #FF9900;;
+}
+.carta.card_premium{
+  border: 5px solid #FF9900;;;
 }
 .carta ul{
   list-style: none;
   padding-left: 0;
 }
 .errori{
+  width: 80%;
   background-color: red;
   padding: 5px 10px;
   border-radius: 5px;
-  margin: 5px 0;
+  margin: 5px auto;
 }
 img.card-logo{
   height: 10px;
 }
 .cartascaduta{
-  border:5px solid red;
+   border:5px solid red !important; 
 }
-.carta.card_user{
+.carta.card_user,.carta.card_premium{
   position: relative;
-  /* min-height: 300px; */
   overflow-y: auto;
   overflow-x: hidden;
-  padding: 5px;
 }
 
 .carta.card_user:hover .infos{
+  background: rgba(0, 0, 0, .8);
+  height: inherit;
   display: block;
 }
-.carta.card_user:hover .immagine img{
+.carta.card_premium:hover .infos{
+  background: rgba(0, 0, 0, .8);
+  height: 100%;
+  display: block;
+}
+
+.carta.card_user:hover .immagine img,.carta.card_premium:hover .immagine img{
   transform: scale(2,2);
 }
 .immagine{
@@ -95,16 +111,14 @@ img.card-logo{
   transition: all 1s;
 }
 .infos{
+background-color: none;
 display: none;
 position: absolute;
 top: 0;
-transition: all 1s linear;
-background-color: rgba(0, 0, 0, 1);
+transition: all 5s linear;
 width: 100%;
 color: white;
-height: 100%;
-padding: 5px 10px;
-
+padding: 2px 10px;
 }
 
 
